// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product card test does not render image if imgUrl is not provided 1`] = `
<DocumentFragment>
  <div
    class="product-card"
  >
    <div
      class="product-card__text"
    >
      <h2
        class="product-card__name"
      >
        Название
      </h2>
      <div
        class="product-card__description"
      >
        Описание
      </div>
      <h1
        class="product-card__price"
      >
        128 $
      </h1>
      <div
        class="product-card__category"
      >
        Одежда
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Product card test should render correctly 1`] = `
<DocumentFragment>
  <div
    class="product-card"
  >
    <div
      class="product-card__text"
    >
      <h2
        class="product-card__name"
      >
        Название
      </h2>
      <div
        class="product-card__description"
      >
        Описание
      </div>
      <h1
        class="product-card__price"
      >
        128 $
      </h1>
      <div
        class="product-card__category"
      >
        Одежда
      </div>
    </div>
    <img
      alt="Название"
      class="product-card__image"
      src="url"
    />
  </div>
</DocumentFragment>
`;
